Created Forget Component, Improved UI

--- a/frontend/Angular/src/app/components/Auth/login/login.html
+++ b/frontend/Angular/src/app/components/Auth/login/login.html
@@ -35,7 +35,7 @@
           </div>
 
           <div class="form-row options-row">
-            <a class="forgot-link" href="#">Forgot?</a>
+            <a class="forgot-link" [routerLink]="['/Forget']">Forgot?</a>
           </div>
 
           <button type="submit" class="btn btn-primary btn-block">Login</button>
@@ -50,6 +50,6 @@
         
       </div>
     </div>
-        <footer class="component-footer">© 2025 Focusly — Mohamed tarek</footer>
+        <footer class="component-footer">© 2025 Focusly — Mohamed Tarek</footer>
   </main>
 </body>
