--- a/frontend/Angular/src/app/components/Auth/register/register.html
+++ b/frontend/Angular/src/app/components/Auth/register/register.html
@@ -101,6 +101,6 @@
         </div>
         </div>
     </div>
-    <footer class="component-footer">© 2025 Focusly — Mohamed tarek</footer>
+    <footer class="component-footer">© 2025 Focusly — Mohamed Tarek</footer>
     </main>
 </body>
